--- a/snake/index.css
+++ b/snake/index.css
@@ -18,13 +18,13 @@ body {
 }
 
 #head {
-  background-color: green;
+  background-color: orange;
   left: 20px;
   top: 20px;
 }
 
 #tail {
-  background-color: lightgreen;
+  background-color: palegoldenrod;
   left: 40px;
   top: 20px;
 }
