--- a/snake/index.css
+++ b/snake/index.css
@@ -15,6 +15,11 @@ body {
   width: 20px;
   height: 20px;
   position: absolute;
+  background-color: lime;
+}
+
+.tails {
+    background-color: palegoldenrod;
 }
 
 #head {
