--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -21,6 +21,17 @@ body {
   position: absolute;
 }
 
+.text {
+  margin-top: 25px;
+  font-family: "Comic Sans MS";
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+  text-align: center;
+  display: block;
+}
+
 #paddleLeft {
   /* appearance */
   background-color: teal;
