fexed pong some more

--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -31,6 +31,16 @@ body {
   display: block;
 }
 
+.speeds {
+  font-family: "Comic Sans MS";
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+  display: inline;
+}
+
+
 #p1 {
   margin-top: 9px;
 }
