--- a/projects/music/index.css
+++ b/projects/music/index.css
@@ -2,6 +2,7 @@ body {
     background-color: white;
 }
 
+
 .eighth-note {
     background-color: black;
 }
@@ -18,8 +19,15 @@ body {
     background-color: black;
 }
 
-#C {
+/* #C {
     color: #ce1451;
+} */
+
+#C {
+    background: rgba(39,62,84,0.82);
+    overflow: hidden;
+    height: 100%;
+    z-index: 2;
 }
 
 #Db {
