nmore music stuff

--- a/projects/music/index.css
+++ b/projects/music/index.css
@@ -24,7 +24,7 @@ body {
 } */
 
 #C {
-    background: rgba(39,62,84,0.82);
+    background: rgba(10, 118, 219, 0.86);
     overflow: hidden;
     height: 100%;
     z-index: 2;
