--- a/projects/music/index.css
+++ b/projects/music/index.css
@@ -8,7 +8,10 @@ body {
 }
 
 .quarter-note {
-    background-color: black;
+    background: url(assets/QuarterNote.png) 0 0 no-repeat fixed;
+    height: 100%;
+    overflow: hidden;
+    color: black;
 }
 
 .half-note {
