Did a LOT of things, wip on reorganizing telemetry and also fixing up various bugs with cheat modes

--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -52,6 +52,7 @@ body {
   height: 20px;
   border-radius: 10px;
   background-color: fuchsia;
+  text-align: center;
   
   /* positioning */
   left: 340px;
