--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -20,11 +20,15 @@ body {
   position: absolute;
 }
 
-#paddleLeft {
+.paddles {
   /* appearance */
   width: 20px;
   height: 80px;
   border-radius: 5px;
+}
+
+#paddleLeft {
+  /* appearance */
   background-color: cyan;
   box-shadow: 0px 0px 0px 3px teal inset;
 
@@ -35,9 +39,6 @@ body {
 
 #paddleRight {
   /* appearance */
-  width: 20px;
-  height: 80px;
-  border-radius: 5px;
   background-color: hotpink;
   box-shadow: 0px 0px 0px 3px maroon inset;
 
