--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -183,23 +183,23 @@ body {
             
 /* Cheat Mode Interface */
 .content {
-    flex: 1;
-    padding: 15px;
+  flex: 1;
+  padding: 15px;
 }
 
 .dashboard {
-    background-color: #333;
-    margin: auto;
-    margin-top: 20px;
-    margin-bottom: 30px;
-    width: 50%;
-    height: 750px;
-    position: relative;
-    border-radius: 10px;
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* IE10+/Edge */
-    user-select: none; /* Standard */
+  background-color: #333;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  width: 50%;
+  height: 750px;
+  position: relative;
+  border-radius: 10px;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
 
 /* .center {
@@ -212,55 +212,71 @@ body {
 } */
 
 button {
-    padding: 30px;
-    margin: 15px;
-    /* margin-top: 15px;
-    margin-bottom: 17px; */
-    border-radius: 100%;
-    border-width: 2px;
-    border-color: black;
-    border-style: solid;  
-    cursor: pointer;
-    outline: none;
+  padding: 30px;
+  margin: 15px;
+  /* margin-top: 15px;
+  margin-bottom: 17px; */
+  border-radius: 100%;
+  /* border-width: 2px;
+  border-color: black;
+  border-style: solid;   */
+  border: none;
+  cursor: pointer;
+  outline: none;
 
-    background-color: rgb(150, 0, 150);
-    /* box-shadow: 0px 12px rgb(90, 0, 90), 0px 6px darkmagenta; */
-    box-shadow: 0px 10px;
+  background-color: rgb(150, 0, 150);
+  /* box-shadow: 0px 12px rgb(90, 0, 90), 0px 6px darkmagenta; */
+  box-shadow: 0px 10px;
 }
 
 button:active {
-    background-color: fuchsia;
-    /* box-shadow: 0px 4px rgb(190, 0, 190); */
-    box-shadow: 0px 4px;
-    transform: translateY(6px);
+  background-color: fuchsia;
+  /* box-shadow: 0px 4px rgb(190, 0, 190); */
+  box-shadow: 0px 4px;
+  transform: translateY(6px);
 }
 
 .activated {
-    color: rgb(0, 61, 0);
-    background-color: green;
+  color: rgb(0, 40, 0);
+  background-color: rgb(0, 90, 0);
+}
+
+.activated:hover {
+  color: rgb(0, 70, 0);
+  background-color: rgb(0, 120, 0);
 }
 
 .activated:active {
-    color: #080;
-    background-color: lime;
+  color: rgb(0, 165, 0);
+  background-color: rgb(0, 255, 0);
 }
 
 .deactivated {
-    background-color: darkred;
-    box-shadow: 0px 12px #3b0000, 0px 6px #3b0000;
+  color: rgb(40, 0, 0);
+  background-color: rgb(90, 0, 0);
+}
+
+.deactivated:hover {
+  color: rgb(70, 0, 0);
+  background-color: rgb(120, 0, 0);
 }
 
 .deactivated:active {
-    background-color: red;
-    box-shadow: 0px 4px darkred;
+  color: rgb(165, 0, 0);
+  background-color: rgb(255, 0, 0);
 }
 
 .disabled {
-    background-color: grey;
-    box-shadow: 0px 12px rgb(83, 83, 83), 0px 6px #a15900;
+  color: rgb(83, 83, 83);
+  background-color: rgb(128, 128, 128);
 }
 
+/* .disabled:hover {
+  color: rgb(83, 83, 83);
+  background-color: rgb(128, 128, 128);
+} */
+
 .disabled:active {
-    background-color: grey;
-    box-shadow: 0px 4px rgb(83, 83, 83);
+  color: rgb(83, 83, 83);
+  background-color: grey;
 }
