--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -250,34 +250,52 @@ button:active {
 }
 
 .activated {
-  color: rgb(0, 40, 0);
-  background-color: rgb(0, 90, 0);
-}
-
-.activated:hover {
-  color: rgb(0, 70, 0);
-  background-color: rgb(0, 120, 0);
-}
-
-.activated:active {
   color: rgb(0, 165, 0);
   background-color: rgb(0, 255, 0);
 }
 
+.activated:hover {
+  color: rgb(0, 110, 0);
+  background-color: rgb(0, 200, 0);
+  /* color: rgb(0, 70, 0);
+  background-color: rgb(0, 120, 0); */
+}
+
+/* .activated:active {
+  color: rgb(0, 165, 0);
+  background-color: rgb(0, 255, 0);
+} */
+
+.activated:active {
+  color: rgb(0, 70, 0);
+  background-color: rgb(0, 160, 0);
+  /* color: rgb(0, 40, 0);
+  background-color: rgb(0, 90, 0); */
+}
+
 .deactivated {
-  color: rgb(40, 0, 0);
-  background-color: rgb(90, 0, 0);
-}
-
-.deactivated:hover {
-  color: rgb(70, 0, 0);
-  background-color: rgb(120, 0, 0);
-}
-
-.deactivated:active {
   color: rgb(165, 0, 0);
   background-color: rgb(255, 0, 0);
 }
+
+.deactivated:hover {
+  color: rgb(110, 0, 0);
+  background-color: rgb(200, 0, 0);
+  /* color: rgb(70, 0, 0);
+  background-color: rgb(120, 0, 0); */
+}
+
+.deactivated:active {
+  color: rgb(70, 0, 0);
+  background-color: rgb(160, 0, 0);
+  /* color: rgb(40, 0, 0);
+  background-color: rgb(90, 0, 0); */
+}
+
+/* .deactivated:active {
+  color: rgb(165, 0, 0);
+  background-color: rgb(255, 0, 0);
+} */
 
 .disabled {
   color: rgb(83, 83, 83);
