--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -260,20 +260,11 @@ button:active {
 .activated:hover {
   color: rgb(0, 110, 0);
   background-color: rgb(0, 200, 0);
-  /* color: rgb(0, 70, 0);
-  background-color: rgb(0, 120, 0); */
 }
-
-/* .activated:active {
-  color: rgb(0, 165, 0);
-  background-color: rgb(0, 255, 0);
-} */
 
 .activated:active {
   color: rgb(0, 70, 0);
   background-color: rgb(0, 160, 0);
-  /* color: rgb(0, 40, 0);
-  background-color: rgb(0, 90, 0); */
 }
 
 .deactivated {
@@ -284,33 +275,27 @@ button:active {
 .deactivated:hover {
   color: rgb(110, 0, 0);
   background-color: rgb(200, 0, 0);
-  /* color: rgb(70, 0, 0);
-  background-color: rgb(120, 0, 0); */
 }
 
 .deactivated:active {
   color: rgb(70, 0, 0);
   background-color: rgb(160, 0, 0);
-  /* color: rgb(40, 0, 0);
-  background-color: rgb(90, 0, 0); */
 }
-
-/* .deactivated:active {
-  color: rgb(165, 0, 0);
-  background-color: rgb(255, 0, 0);
-} */
 
 .disabled {
   color: rgb(83, 83, 83);
   background-color: rgb(128, 128, 128);
 }
 
-/* .disabled:hover {
-  color: rgb(83, 83, 83);
-  background-color: rgb(128, 128, 128);
-} */
-
 .disabled:active {
   color: rgb(83, 83, 83);
   background-color: grey;
+}
+
+.on {
+  background-color: rgb(0, 100, 0);
+}
+
+.off {
+  background-color: rgb(100, 0, 0);
 }
