Got the slider for singlePlayer working

--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -272,3 +272,101 @@ button:active {
   color: rgb(83, 83, 83);
   background-color: grey;
 }
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 20px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: cyan;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: blue;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: hotpink;
+}
+
+input:checked + .slider:before {
+  background-color: red;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.deactivated {
+  background-color: rgb(115, 219, 219);
+}
+
+.slider.deactivated:before {
+  background-color: rgb(101, 107, 192);
+}
+
+input:checked + .slider.deactivated {
+  background-color: rgb(209, 142, 212);
+}
+
+input:checked + .slider.deactivated:before {
+  background-color: rgb(197, 74, 74);
+}
+
+.slider.disabled {
+  background-color: lightgrey;
+}
+
+.slider.disabled:before {
+  background-color: grey;
+}
+
+input:checked + .slider.disabled {
+  background-color: lightgrey;
+}
+
+input:checked + .slider.disabled:before {
+  background-color: grey;
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
