--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -223,52 +223,61 @@ button {
   -ms-user-select: none; /* IE10+/Edge */
   user-select: none; /* Standard */
 
-  background-color: rgb(150, 0, 150);
+  background-color: rgb(225, 0, 225);
   box-shadow: 0px 10px;
 }
 
+button:hover {
+  background-color: rgb(200, 0, 200)
+}
+
 button:active {
-  background-color: fuchsia;
+  background-color: rgb(160, 0, 160);
   box-shadow: 0px 4px;
   transform: translateY(6px);
 }
 
-.activated {
+button.activated {
   color: rgb(0, 165, 0);
   background-color: rgb(0, 255, 0);
 }
 
-.activated:hover {
+button.activated:hover {
   color: rgb(0, 110, 0);
   background-color: rgb(0, 200, 0);
 }
 
-.activated:active {
+button.activated:active {
   color: rgb(0, 70, 0);
   background-color: rgb(0, 160, 0);
 }
 
-.deactivated {
+button.deactivated {
   color: rgb(165, 0, 0);
   background-color: rgb(255, 0, 0);
 }
 
-.deactivated:hover {
+button.deactivated:hover {
   color: rgb(110, 0, 0);
   background-color: rgb(200, 0, 0);
 }
 
-.deactivated:active {
+button.deactivated:active {
   color: rgb(70, 0, 0);
   background-color: rgb(160, 0, 0);
 }
 
-.disabled {
+button.disabled {
   color: rgb(83, 83, 83);
   background-color: rgb(128, 128, 128);
 }
 
-.disabled:active {
+button.disabled:hover {
+  color: rgb(83, 83, 83);
+  background-color: rgb(128, 128, 128);
+}
+
+button.disabled:active {
   color: rgb(83, 83, 83);
   background-color: grey;
 }
@@ -321,7 +330,7 @@ input:checked + .slider {
 }
 
 input:checked + .slider:before {
-  background-color: red;
+  background-color: maroon;
 }
 
 input:checked + .slider:before {
@@ -331,19 +340,19 @@ input:checked + .slider:before {
 }
 
 .slider.deactivated {
-  background-color: rgb(115, 219, 219);
+  background-color: rgb(141, 226, 226);
 }
 
 .slider.deactivated:before {
-  background-color: rgb(101, 107, 192);
+  background-color: rgb(116, 116, 216);
 }
 
 input:checked + .slider.deactivated {
-  background-color: rgb(209, 142, 212);
+  background-color: rgb(219, 149, 184);
 }
 
 input:checked + .slider.deactivated:before {
-  background-color: rgb(197, 74, 74);
+  background-color: rgb(161, 64, 64);
 }
 
 .slider.disabled {
