--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -282,6 +282,47 @@ button.disabled:active {
   background-color: grey;
 }
 
+#ballCount {
+  margin-left: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 40px;
+  width: 50px;
+  border-radius: 20%;
+  font-family: 'Comic Sans MS';
+  /* font-family:'Courier New', Courier, monospace; */
+  text-align: center;
+  font-size: 15pt;
+  border: none;
+}
+
+#confirmBallCount {
+  margin-left: 10px;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 30px;
+  width: 30px;
+  border-radius: 20%;
+  border: none;
+  /* font-family:'Courier New', Courier, monospace; */
+  font-family: 'Comic Sans MS';
+  font-size: 12pt;
+  background-color: rgb(0, 255, 0);
+  box-shadow: 0px 3px rgb(0, 165, 0);
+  /* color: rgb(0, 165, 0); */
+}
+
+#confirmBallCount:hover {
+  box-shadow: 0px 3px rgb(0, 110, 0);
+  background-color: rgb(0, 200, 0);
+}
+
+#confirmBallCount:active {
+  background-color: rgb(0, 160, 0);
+  box-shadow: 0px 1px rgb(0, 70, 0);
+  transform: translateY(2px);
+}
+
 /* The switch - the box around the slider */
 .switch {
   position: relative;
