--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -195,9 +195,10 @@ body {
   font-size: 15pt;
   margin-top: 25px;
   margin-bottom: 25px;
-  font-family:'Courier New', Courier, monospace;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-family: 'Courier New', Courier, monospace;
 }
-
 .on {
   background-color: rgb(0, 100, 0);
 }
@@ -210,7 +211,7 @@ button {
   height: 60px;
   width: 60px;
   border-radius: 100%;
-  margin-right: 15px;
+  /* margin-right: 15px; */
   /* border-width: 2px;
   border-color: black;
   border-style: solid;   */
@@ -283,10 +284,11 @@ button.disabled:active {
 }
 
 #ballCount {
-  margin-left: 20px;
+  /* position: relative; */
+  /* display: block; */
   margin-top: auto;
   margin-bottom: auto;
-  height: 40px;
+  height: 40px; /*40px*/
   width: 50px;
   border-radius: 20%;
   font-family: 'Comic Sans MS';
@@ -296,10 +298,24 @@ button.disabled:active {
   border: none;
 }
 
-#confirmBallCount {
-  margin-left: 10px;
+div#label {
   margin-top: auto;
   margin-bottom: auto;
+  margin-left: 10px;
+}
+
+.multiBall label {
+  position: relative;
+  /* display: block; */
+  color: white;
+  font-size: 12pt;
+  font-family: 'Courier New', Courier, monospace;
+}
+  
+#confirmBallCount {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 10px;
   height: 30px;
   width: 30px;
   border-radius: 20%;
@@ -331,7 +347,6 @@ button.disabled:active {
   height: 34px;
   margin-top: auto;
   margin-bottom: auto;
-  margin-left: 20px;
 }
 
 /* Hide default HTML checkbox */
