--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -175,7 +175,7 @@ body {
 .dashboard {
   background-color: #333;
   margin-left: 40px;
-  width: 400px;
+  width: auto;
   position: relative;
   border: 1px solid white;
   border-radius: 10px;
