--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -77,8 +77,7 @@ body {
   top: 210px;
 }
 
-#cheatIcon {
-    /* appearance */
+/* #cheatIcon {
     width: 50px;
     height: 50px;
     border-radius: 30px;
@@ -87,10 +86,9 @@ body {
     border-color: grey;
     border-width: 4px;
 
-    /* positioning */
     left: 10px;
     top: 10px;
-}
+} */
 
 .scoreboard {
   /* appearance */
