--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -16,6 +16,11 @@ body {
   position: relative;
 }
 
+#paused {
+  -webkit-mask-image: radial-gradient(circle, black 50%, rgba(0, 0, 0, 0.5) 50%);
+  /* mask-image: radial-gradient(circle, black 30%, rgba(0, 0, 0, 0.5) 0%); */
+}
+
 .gameItem {
   /* positioning */
   position: absolute;
