--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -18,14 +18,81 @@ body {
 
 #paused {
   position: absolute; /* Sit on top of the page content */
-  display: none; /* Hidden by default */
+  display: block; /* Hidden by default */
   width: 750px;
   height: 480px;
   top: 9px;
   left: 9px;
   background-color: rgba(0,0,0,0.5); /* Black background with opacity */
   z-index: 3; /* Specify a stack order in case you're using a different order for other elements */
-  cursor: pointer; /* Add a pointer on hover */
+  /* cursor: pointer; Add a pointer on hover */
+}
+
+.pauseText {
+  /* margin: 0; */
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  text-align: center;
+  font-family: "Comic Sans MS";
+  color: white;
+  border: 1px solid white;
+  /* border: none; */
+}
+
+#title {
+  position: relative;
+  /* height: 25%; */
+  border: inherit;
+}
+
+#subtitle {
+  position: relative;
+  /* height: 25%; */
+  border: inherit;
+}
+
+#controls {
+  position: relative;
+  /* height: 50%; */
+  border: inherit;
+}
+
+div.controls {
+  position: static;
+  display: inline-block;
+  width: 32%;
+  /* height: 100%; */
+  border: inherit;
+}
+
+.key {
+  position: relative;
+  filter: invert();
+  width: 25%;
+  text-align: center;
+}
+
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.container-inline {
+  position: relative;
+  text-align: center;
+  color: white;
+  display: block;
+}
+
+.key-text {
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
 }
 
 .gameItem {
