Minor change to cheatMode, getting rid of its controls info now that we have those in the pause menu. Also started the game off as paused so that players can understand the controls

--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -18,7 +18,7 @@ body {
 
 #paused {
   position: absolute; /* Sit on top of the page content */
-  display: none; /* Hidden by default */
+  display: block; /* Hidden by default */
   width: 750px;
   height: 480px;
   top: 9px;
