Working on the new dynamic pausemenu. VS 2022 isn't doing what I need it to do, tho, so am gonna go work in gitpod some more again

--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -88,6 +88,11 @@ div.controls {
   border: inherit;
 }
 
+#spacebar {
+    max-width: 30px;
+    background-color: red;
+}
+
 .key span {
   position: absolute;
   display: inline;
