--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -75,14 +75,14 @@ div.controls {
   /* top: 0; */
 }
 
-#pauseMessage p {
+/* #pauseMessage p { */
   /* position: static; */
   /* font-size: 12pt; */
   /* margin-top: 0px; */
   /* margin-bottom: auto; */
   /* margin-top: 0px;
   margin-bottom: 0px; */
-}
+/* } */
 
 .row {
   display: block;
@@ -101,11 +101,13 @@ div.controls {
 }
 
 #begin-continue .key {
-  width: 100px;
+  width: 200px;
+  /* width: auto; */
 }
 
 #begin-continue span {
-  width: 100px;
+  width: 200px;
+  /* width: auto; */
 }
 
 .key img {
